--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"PlaceOrder.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[]","ProjectBreakpoints":"{\"Value\":{}}"}
