Attempt at adding some MVP functionality

--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"PlaceOrder.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"MVP/PlaceOrder.xaml\",\"MVP/AddClient.xaml\",\"MainDriver/FrontEndInterface.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
