--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"TempMohit/DataAccess/GetProductList.xaml\",\"TempMohit/Features/PlaceOrders.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
