--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"TempMohit/Uis/PlaceOrderUi.xaml\",\"TempMohit/Features/PlaceOrder.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
