Still trying to add MVP. But this way has shown more results

--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"MVP/PlaceOrder.xaml\",\"MVP/AddClient.xaml\",\"MainDriver/FrontEndInterface.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"MainDriver/Main.xaml\",\"MainDriver/FrontEndInterface.xaml\",\"MVP/AddVendor.xaml\",\"MVP/AddClient.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
