pulled working into workingmohit to get Niles' updates

--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"TempMohit/Uis/PlaceOrderUi.xaml\",\"TempMohit/Uis/ClientMenu.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[]","ProjectBreakpoints":"{\"Value\":{}}"}
