--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"TempFusion/temp.xaml\",\"TempFusion/raw.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"Reference/raw.xaml\",\"Fusion(Clean)/UI/AddClientUI.xaml\",\"Fusion(Clean)/DataAccess/GetNextClientID.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
