addclient: half complete

--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Reference/raw.xaml\",\"Fusion(Clean)/UI/AddClientUI.xaml\",\"Fusion(Clean)/DataAccess/GetNextClientID.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"Fusion(Clean)/UI/AddClientUI.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
