mvp feature (place orders) minimally complete

--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Fusion(Clean)/UI/AddClientUI.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"MainDriver/Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
