finished Add Client (with Shopping List) feature, created 2 new excel sheets for New Clients and New Vendors

--- a/Project0/.local/ProjectSettings.json
+++ b/Project0/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"MainDriver/Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"Uis/MainMenu.xaml\",\"MainDriver/Main.xaml\",\"Features/AddClient.xaml\",\"Features/AddVendors.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
